--- a/index.html
+++ b/index.html
@@ -6,34 +6,35 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" class="display"/>
+        <input type="text" id="display" class="display"/>
 
         <div class="buttons">
-            <button data-value="AC" class="autre">AC</button>
-            <button data-value="DEL" class="autre">DEL</button>
-            <button data-value="%" class="autre">%</button>
-            <button data-value="/" class="operator">/</button> 
+            <button onclick="clearDisplay()"; class="autre">AC</button>
+            <button onclick="delDisplay()"; class="autre">DEL</button>
+            <button onclick="appendToDisplay('%')"; class="autre">%</button>
+            <button onclick="appendToDisplay('/')"; class="operator">/</button> 
 
-            <button data-value="7" class="number">7</button>
-            <button data-value="8" class="number">8</button>
-            <button data-value="9" class="number">9</button>
-            <button data-value="*" class="operator">*</button> 
+            <button onclick="appendToDisplay('7')"; class="number">7</button>
+            <button onclick="appendToDisplay('8')"; class="number">8</button>
+            <button onclick="appendToDisplay('9')"; class="number">9</button>
+            <button onclick="appendToDisplay('*')"; class="operator">*</button> 
 
-            <button data-value="4" class="number">4</button>
-            <button data-value="5" class="number">5</button>
-            <button data-value="6" class="number">6</button>
-            <button data-value="-" class="operator">-</button> 
+            <button onclick="appendToDisplay('4')"; class="number">4</button>
+            <button onclick="appendToDisplay('5')"; class="number">5</button>
+            <button onclick="appendToDisplay('3')"; class="number">6</button>
+            <button onclick="appendToDisplay('-')"; class="operator">-</button> 
 
-            <button data-value="1" class="number">1</button>
-            <button data-value="2" class="number">2</button>
-            <button data-value="3" class="number">3</button>
-            <button data-value="+" class="operator">+</button> 
+            <button onclick="appendToDisplay('1')"; class="number">1</button>
+            <button onclick="appendToDisplay('2')"; class="number">2</button>
+            <button onclick="appendToDisplay('3')"; class="number">3</button>
+            <button onclick="appendToDisplay('+')"; class="operator">+</button> 
 
-            <button data-value="0" class="number">0</button>
-            <button data-value="00" class="number">00</button>
-            <button data-value="." class="number">.</button>
-            <button data-value="=" class="operator">=</button> 
+            <button onclick="appendToDisplay('0')"; class="number">0</button>
+            <button onclick="appendToDisplay('00')"; class="number">00</button>
+            <button onclick="appendToDisplay('.')"; class="number">.</button>
+            <button onclick="calculate()"; class="operator">=</button> 
         </div>
     </div>
+    <script src="index.js" ></script>
 </body>
 </html>
